# xv6_rpi2_port

./: CMakeLists.txt  Makefile  README  kernel.ld
include/: arm.h  buf.h  defs.h  elf.h  file.h  fs.h  fvp.h  memlayout.h  mmu.h  proc.h  spinlock.h  stat.h  traps.h  types.h
source/: bio.c  console.c  entry.S  exception.S  exec.c  fs.c  kalloc.c  mailbox.c  main.c  memide.c  mmu.c  pipe.c  proc.c  spinlock.c  string.c  syscall.c  sysfile.c  sysproc.c  timer.c  trap.c  uart.c  uart_pl011.c  vm.c
uprogs/: proc.h
